syntax = "proto3";

package webitel.chat.server; 

option go_package = "github.com/webitel/chat_manager/api/proto/chat";

// Account contact info to replace legacy chat.Client info
message Account {
    // Unique IDentifier
    int64  id = 1;
    // Channel communication type
    string channel = 2; // e.g.: user, flow, mobile, telegram, facebook, viber, skype ...
    // Channel specific contact string
    string contact = 3; // optional: channel specific contact string

    string first_name = 4; // optional
    string last_name = 5; // optional
    string username = 6; // required
}
